// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de GifGrid debe mostrar items cuando se carga 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    OnePunch
  </h3>
  <div
    className="card-grid"
  >
    <ol>
      <GifGridItem
        id="abc"
        key="abc"
        title="Cualquier cosa"
        url="http://localhost/cualquier/cosa.jpg"
      />
    </ol>
  </div>
</Fragment>
`;

exports[`Pruebas de GifGrid muestra correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    OnePunch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  >
    <ol />
  </div>
</Fragment>
`;
